Grocery component created

--- a/package.json
+++ b/package.json
@@ -3,12 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@redq/reuse-modal": "^1.2.4",
+    "@styled-system/css": "^5.1.5",
+    "@styled-system/theme-get": "^5.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "baseui": "^9.94.0",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
+    "js-cookie": "^2.2.1",
+    "link-react": "^3.0.0",
+    "localforage": "^1.9.0",
+    "mobile-detect": "^1.4.4",
+    "next": "^9.5.2",
+    "next-cookies": "^2.0.3",
     "react": "^16.13.1",
+    "react-content-loader": "^5.1.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-flexbox-grid": "^2.1.2",
+    "react-image": "^4.0.3",
+    "react-intl": "^5.4.7",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "3.4.2",
+    "react-scroll": "^1.8.1",
+    "react-sticky": "^6.0.3",
+    "react-stickynode": "^3.0.3",
+    "react-swipeable-views": "^0.13.9",
+    "react-swipeable-views-utils": "^0.13.9",
+    "styled-components": "^5.1.1",
+    "styled-system": "^5.1.5",
+    "styletron-react": "^5.2.7",
+    "stylis-plugin-rtl": "^1.0.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
